[test] Add jdk.attach.allowAttachSelf for java 9 and jmockit